--- a/problem1/page.html
+++ b/problem1/page.html
@@ -7,9 +7,10 @@
 		<script src="./script.js"></script>
 	</head>
 	<body>
+		<label>Enter n:</label>
 		<input type="text" id="number" />
 		<button onclick="submitInput()">Submit</button>
-		<div>Open console to check the result</div>
+		<div>Open console to check the result!</div>
 		<div id="result"></div>
 		<script>
 			let numberInput = 0;
